security enhancement + user default population
