# src/models/Token.ts
@@ -1,27 +1,24 @@
 import * as moment from 'moment';
-import * as jwt from 'jwt-simple';
 import * as _ from 'lodash';
 import {Config} from '../config';
 import {DatabaseDataAccess} from '../data-access';
+import {EncryptionServices} from "../services";
 
 export class Token {
     username: string;
-    token: any;
+    token: string;
     creation: string;
     expiration: string;
-    expires: string;
 
     constructor(data: any) {
-        !_.isNil(data) && !_.isNil(data.username) ? this.generate(data) : null;
+        this.username = !_.isNil(data) && !_.isNil(data.username) ? data.username : '';
+        this.creation = !_.isNil(data) && !_.isNil(data.creation) ? data.creation : moment.utc().format();
+        this.expiration = !_.isNil(data) && !_.isNil(data.expiration) ? data.expiration : moment.utc().add(Config.token.expiration, 'days').format();
+        this.token = !_.isNil(data) && !_.isNil(data.token) ? data.token : EncryptionServices.hash(this.username + this.creation + this.expiration, Config.encryption.iterations);
     }
 
-    generate(data: any) {
-        this.username = data.username;
-        this.token = jwt.encode({exp: this.expires}, Config.token.secret);
-        this.creation = moment.utc().format();
-        this.expiration = moment.utc().add(Config.token.expiration, 'days').format();
-
-        const filter = {username: this.username};
-        return DatabaseDataAccess.findOneAndUpdate(Config.database.collections.tokens, filter, this);
+    isValid(): boolean {
+        const now = moment.utc().format();
+        return now >= this.creation && now <= this.expiration;
     }
 }
